# esp32-smart-cooking-firmware

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.release
.devcontainer/: Dockerfile
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
components/app_types/: CMakeLists.txt  app_types.h
components/bme280/: CMakeLists.txt  bme280.c
components/bme280/include/: bme280.h
components/comms/: CMakeLists.txt  cli_task.h  comms_task.c  comms_task.h
components/cooking_logic/: CMakeLists.txt  cooking_logic.c  cooking_logic.h
components/drv8833/: CMakeLists.txt  drv8833.c
components/drv8833/include/: drv8833.h
components/ota/: CMakeLists.txt  ota_task.c  ota_task.h
components/provisioning/: CMakeLists.txt  provisioning.h  provisioning_security.c  provisioning_security.h
docs/: MILESTONE_PLAN_SmartCooking.md  SDD_SmartCooking.md  SRD_SmartCooking.md
main/: CMakeLists.txt  Kconfig.projbuild  app_types.h  cli_task.c  comms_task.c  comms_task.h  control_task.c  control_task.h  idf_component.yml  main.c  motor_task.c  motor_task.h  provisioning.c  provisioning_security.c  thermal_task.c  thermal_task.h
test_apps/drivers/: CMakeLists.txt  sdkconfig.defaults
test_apps/drivers/main/: CMakeLists.txt  app_main.c  test_bme280.c  test_bme280.h  test_drv8833.c  test_drv8833.h
test_apps/unity/: CMakeLists.txt  sdkconfig.defaults
test_apps/unity/main/: CMakeLists.txt  test_heater_fail.c  test_main.c  test_ota_dispatch.c  test_profile.c  test_state_machine.c
tools/: unity_to_junit.py
